kubectl/guacamole/deployment.yaml
# NOTES #
# You will need to take a few steps when configuring OIDC auth for guacamole
# a guacamole.properties file will be created in the config\guacamole\ directory. edit it and add the following

# extension-priority: *, openid
# openid-client-id: YOURCLIENTID
# openid-authorization-endpoint: https://YOUR-OIDC-SERVER.COM/application/o/authorize/
# openid-jwks-endpoint: https://YOUR-OIDC-SERVER.COM/application/o/YOUR-SLUG/jwks/
# openid-issuer: https://YOUR-OIDC-SERVER.COM/application/o/YOUR-SLUG/
# openid-redirect-uri: https://YOUR-GUACAMOLE-SERVER.COM/
# openid-username-claim-type: preferred_username
# openid-scope: openid email profile
# restart the application

# once you are configured, you will want to pre-create your admin user.
# create the user with no password and use the same username as your OIDC username. and set the local permissions as needed
# then edit the guacamole.properties file and edit the following line and remove "*, " so that local auth is disabled:
# extension-priority: openid

# restart the application and you should be all set

apiVersion: apps/v1
kind: Deployment
metadata:
  name: guacamole
spec:
  replicas: 1
  selector:
    matchLabels:
      app: guacamole
  template:
    metadata:
      labels:
        app: guacamole
    spec:
      containers:
        - name: guacamole
          image:  jwetzell/guacamole
          resources:
            requests:
              memory: "256Mi"
              cpu: "10m"
            limits:
              memory: "2Gi"
              cpu: "500m"  
          volumeMounts:
            - mountPath: /config
              name: nfs
              subPath: applications/guacamole/volumes/config
      tolerations:
        - key: "node.kubernetes.io/unreachable"
          operator: "Exists"
          effect: "NoExecute"
          tolerationSeconds: 15
        - key: "node.kubernetes.io/not-ready"
          operator: "Exists"    
          effect: "NoExecute"    
          tolerationSeconds: 15          
      volumes:
        - name: nfs
          persistentVolumeClaim:
            claimName: truenas-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: guacamole-service-tcp
  annotations:
    metallb.io/address-pool: "internal-pool"
    metallb.io/allow-shared-ip: "shared-ip"
spec:
  type: LoadBalancer
  selector:
    app: guacamole
  ports:
    - name: http
      port: 8086
      targetPort: 8080
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guacamole-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: myresolver
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-security-headers@kubernetescrd
spec:
  tls:
    - hosts:
      - guacamole.joeberry.org
  rules:
  - host: guacamole.joeberry.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: guacamole-service-tcp
            port:
              number: 8086
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guacamole-ingress-http
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-redirect-to-https@kubernetescrd
spec:
  rules:
  - host: guacamole.joeberry.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: guacamole-service-tcp
            port:
              number: 8086
